// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Donuts should render a complex donut 1`] = `
<DocumentFragment>
  <div
    class="donut-complex "
  >
    <svg
      height="200"
      viewBox="0 0 200 200"
      width="200"
    >
      <g>
        <circle
          cx="100"
          cy="100"
          r="80"
          stroke="#B9F6CA"
          stroke-dasharray="502.6548245743669"
          stroke-dashoffset="314.34033698166456"
          stroke-width="40"
          transform="rotate(-90, 100, 100)"
        />
        <text
          dy="3px"
          text-anchor="middle"
          x="173.8756687233046"
          y="69.30170085029867"
        >
          37%
        </text>
      </g>
      <g>
        <circle
          cx="100"
          cy="100"
          r="80"
          stroke="#FF80AB"
          stroke-dasharray="502.6548245743669"
          stroke-dashoffset="391.11470500022784"
          stroke-width="40"
          transform="rotate(44.87031700288185, 100, 100)"
        />
        <text
          dy="3px"
          text-anchor="middle"
          x="107.23297432334213"
          y="179.6723545681805"
        >
          22%
        </text>
      </g>
      <g>
        <circle
          cx="100"
          cy="100"
          r="80"
          stroke="#FF8A80"
          stroke-dasharray="502.6548245743669"
          stroke-dashoffset="419.3618781391332"
          stroke-width="40"
          transform="rotate(124.75504322766571, 100, 100)"
        />
        <text
          dy="3px"
          text-anchor="middle"
          x="27.74388100642821"
          y="134.33734509228682"
        >
          17%
        </text>
      </g>
      <g>
        <circle
          cx="100"
          cy="100"
          r="80"
          stroke="#8C9EFF"
          stroke-dasharray="502.6548245743669"
          stroke-dashoffset="430.22617550025063"
          stroke-width="40"
          transform="rotate(184.4092219020173, 100, 100)"
        />
        <text
          dy="3px"
          text-anchor="middle"
          x="30.96065702741309"
          y="59.582564134849996"
        >
          14%
        </text>
      </g>
      <g>
        <circle
          cx="100"
          cy="100"
          r="80"
          stroke="#B388FF"
          stroke-dasharray="502.6548245743669"
          stroke-dashoffset="455.5762026761913"
          stroke-width="40"
          transform="rotate(236.28242074927954, 100, 100)"
        />
        <text
          dy="3px"
          text-anchor="middle"
          x="76.79888609122719"
          y="23.43820591579538"
        >
          9%
        </text>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Donuts should render a simple donut with custom props 1`] = `
<DocumentFragment>
  <div
    class="donut"
  >
    <svg
      class="donut__canvas"
      height="34"
      viewBox="0 0 34 34"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="donut__frame"
        cx="17"
        cy="17"
        r="16"
      />
      <circle
        class="donut__circle"
        cx="17"
        cy="17"
        r="16"
        stroke-dasharray="50 100"
      />
    </svg>
    <div
      class="donut__text"
    >
      <strong>
        50%
      </strong>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Donuts should render simple donut with default props 1`] = `
<DocumentFragment>
  <div
    class="donut"
  >
    <svg
      class="donut__canvas"
      height="34"
      viewBox="0 0 34 34"
      width="34"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="donut__frame"
        cx="17"
        cy="17"
        r="16"
      />
      <circle
        class="donut__circle"
        cx="17"
        cy="17"
        r="16"
        stroke-dasharray="0 100"
      />
    </svg>
    <div
      class="donut__text"
    >
      <strong>
        0
      </strong>
    </div>
  </div>
</DocumentFragment>
`;
